--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -78,7 +78,7 @@ nav {
 
 /* MAIN */
 .bg-intro {
-  background-image: url(../imgs/animate-cover-3.jpeg);
+  background-image: url(../imgs/bg-intro.jpeg);
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -137,7 +137,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url(../imgs/assets/empleados/cover.jpg);
+  background: url(../imgs/bg-empleados.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -146,8 +146,8 @@ nav {
   color: white;
   padding-top: 20px;
   padding-bottom: 20px;
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .miembros-section {
@@ -165,13 +165,31 @@ nav {
   gap: 20rem;
 }
 
+.employee-section {
+  margin-top: 5rem;
+  display: flex;
+  justify-content: center;
+  width: auto;
+  gap: 5%;
+  margin-bottom: 5rem;
+}
+
+.hover-animation {
+  transition: transform 0.3s ease;
+}
+.hover-animation:hover {
+  transform: scale(1.2);
+}
+
 .usercard {
+  display: grid;
+  place-items: center;
   background-color: white;
   border-radius: 15px;
   padding: 15px;
+  width: auto;
 }
 .usercard img {
-  margin-left: 8px;
   border: #fff 2px solid;
   border-radius: 10px;
 }
@@ -199,6 +217,13 @@ nav {
   width: 100%;
 }
 
+.form-control {
+  transition: transform 0.3s ease;
+}
+.form-control:hover {
+  transform: scale(1.2);
+}
+
 .map-settings {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   min-width: 100vw;
@@ -214,10 +239,14 @@ nav {
   padding-bottom: 3rem;
   margin-top: 10rem;
   margin-bottom: 10rem;
-  backdrop-filter: blur(13.2px);
-  box-shadow: 26px 18px 14px 12px rgba(153, 92, 92, 0.65);
-  -webkit-box-shadow: 26px 18px 14px 12px rgba(153, 92, 92, 0.65);
-  -moz-box-shadow: 26px 18px 14px 12px rgba(153, 92, 92, 0.65);
+  background: rgba(255, 255, 255, 0);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+}
+.flex-form h3 {
+  color: black;
+  font-size: 70px;
 }
 
 .info-box {
@@ -238,96 +267,35 @@ nav {
   font-size: 50px;
 }
 
-/* PRODUCTOS */
-.tienda-productos-box {
-  background: url(https://images.unsplash.com/photo-1555505019-8c3f1c4aba5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-  padding-bottom: 15rem;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.portada-tienda img {
-  width: 170rem;
-  height: 50rem;
-  padding: 5rem;
-}
-
-.items-tienda {
-  padding: 5rem;
-}
-
-.items-tienda img {
-  width: 30rem;
-  height: 15rem;
-  margin-left: 8rem;
-}
-
-.tienda-productos-box {
-  background: url(https://images.unsplash.com/photo-1555505019-8c3f1c4aba5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-  padding-bottom: 15rem;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.newsletter-wrapper {
-  background: url(../imgs/newsletter-cover.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding-top: 13rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
-  padding-bottom: 15rem;
-}
-
 .newsletter-box {
-  border: 1px solid black;
-  border-radius: 15px;
-  padding: 12px;
-  padding-bottom: 20rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
-
-.newsletter-box label input {
-  width: 50rem;
-  display: block;
-  margin-left: 50rem;
+.newsletter-box h3, .newsletter-box p, .newsletter-box label {
+  font-family: "Oswald", sans-serif;
+  color: white;
 }
-
-.newsletter-box label {
-  font-size: 2rem;
-  text-align: center;
-}
-
 .newsletter-box input {
-  height: 2.5rem;
+  max-width: 50%;
 }
 
-.newsletter-form {
-  padding-top: 10rem;
+.bg-newsletter {
+  background-color: rgb(26, 23, 23);
+  min-height: 50vh;
+  width: 100%;
 }
 
-.empleado-galeria {
-  padding-top: 15rem;
-  padding-bottom: 15rem;
-  background: url(https://i.pinimg.com/originals/e4/1e/b7/e41eb750682725518534bee5d75574af.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.empleado-galeria div {
-  display: inline;
-}
-
-.empleado-box a {
-  margin-left: 15rem;
-}
-
-.empleado-box img {
+.button-newsletter {
+  display: flex;
+  align-items: center;
+  width: 100px;
   border-radius: 15px;
-}
-
-.custom-bg-contacts {
-  background: url(../imgs/bg-for-map.jpg);
-  background-size: cover;
+  background-color: blueviolet;
 }
 
 .footer-line {
@@ -351,6 +319,11 @@ footer p {
   .admins-section {
     flex-direction: column;
     gap: 30px;
+  }
+  .employee-section {
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
   }
 }
 @media screen and (max-width: 375px) {
