arreglado el footer para que sea responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,8 @@ nav {
 }
 
 .footer-line {
-  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+  margin-bottom: -7rem;
 }
 
 footer {
