--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -309,7 +309,8 @@ nav{
 }
 // FOOTER
 .footer-line{
-  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+  margin-bottom: -7rem;
 }
 footer{
   min-height: 40%;
