--- a/css/styles.css
+++ b/css/styles.css
@@ -126,11 +126,17 @@ nav {
 
 .btn-bg {
   display: inline-block;
-  padding: 2rem;
+  padding: 1rem;
   background-color: black;
-  text-decoration: none;
-  font-weight: bold;
   border-radius: 4px;
+  font-size: 40px;
+}
+
+.btn-line {
+  max-width: 50px;
+  height: 2px;
+  background-color: yellow;
+  transition: all 0.4s ease-in-out;
 }
 
 .intro-p {
