--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -145,11 +145,16 @@ nav{
 }
 .btn-bg {
   display: inline-block;
-  padding: 2rem;
+  padding: 1rem;
   background-color: black;
-  text-decoration: none;
-  font-weight: bold;
   border-radius: 4px;
+  font-size: calc($fontsizetitulos - 60px);
+}
+.btn-line{
+  max-width: 50px;
+  height: 2px;
+  background-color: yellow;
+  transition: all .4s ease-in-out
 }
 .title-cover {
   @extend .centerflex
